--- a/resource-example/trash/___see-html.html
+++ b/resource-example/trash/___see-html.html
@@ -2,23 +2,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>SpineNav</title>
-  <link rel="shortcut icon" href="cwui.ico">
-  <script defer="" src="jsExtd.js"></script>
-  <script defer="" src="Core.js"></script>
-  <script defer="" src="GenericCache.js"></script>
-  <script defer="" src="FileCache.js"></script>
-  <script defer="" src="Vector.js"></script>
-  <script defer="" src="FingerActions.js"></script>
-  <script defer="" src="ImageFrameRate.js"></script>
-  <script defer="" src="OverlayCanvas.js"></script>
+  <link rel="shortcut icon" href="../cwui.ico">
+  <script defer="" src="../jsExtd.js"></script>
+  <script defer="" src="../Core.js"></script>
+  <script defer="" src="../GenericCache.js"></script>
+  <script defer="" src="../FileCache.js"></script>
+  <script defer="" src="../Vector.js"></script>
+  <script defer="" src="../FingerActions.js"></script>
+  <script defer="" src="../ImageFrameRate.js"></script>
+  <script defer="" src="../OverlayCanvas.js"></script>
   <link rel="stylesheet" href="vkeyboard/VKeyboard.css">
-  <script defer="" src="vkeyboard/VKeyboard.js"></script>
-  <script defer="" src="cwui.js"></script>
+  <script defer="" src="../vkeyboard/VKeyboard.js"></script>
+  <script defer="" src="../cwui.js"></script>
   <!-- <script src="LocalDevelop.js"></script>-->
-  <script defer="" src="mainCwui.js"></script>
+  <script defer="" src="../mainCwui.js"></script>
 
-  <link rel="stylesheet" href="cwui.css">
-  <script src="jquery-3.5.1.min.js"></script> <!-- jquery 3.5.1 provided by default -->
+  <link rel="stylesheet" href="../cwui.css">
+  <script src="../jquery-3.5.1.min.js"></script> <!-- jquery 3.5.1 provided by default -->
   <link rel="stylesheet" href="asset/css/Common.css">
   <link rel="stylesheet" href="asset/css/ScCameraViewer.css">
   <link href="asset/css/ScDialog.css" rel="stylesheet">
@@ -181,10 +181,10 @@
 
 </div>
 <div id="virtual-keyboard" style="display: none;"><div class="page"><div class="container top"><div class="header">
-  <div id="virtual-keyboard-cancel" class="button" title="cancel"><img class="icon" src="vkeyboard/cancel.svg"></div>
-  <div id="virtual-keyboard-clear" class="button" title="clear"><img class="icon" src="vkeyboard/clear.svg"></div>
+  <div id="virtual-keyboard-cancel" class="button" title="cancel"><img class="icon" src="../vkeyboard/cancel.svg"></div>
+  <div id="virtual-keyboard-clear" class="button" title="clear"><img class="icon" src="../vkeyboard/clear.svg"></div>
   <input id="virtual-keyboard-value" class="value" contenteditable="true" type="password">
-  <div id="virtual-keyboard-ok" class="button" title="validate"><img class="icon" src="vkeyboard/ok.svg"></div>
+  <div id="virtual-keyboard-ok" class="button" title="validate"><img class="icon" src="../vkeyboard/ok.svg"></div>
 </div></div><div class="container bottom"><div class="panel left"><div class="row"><div id="virtual-keyboard-key-1" class="key" style="width: 100%">
   <div class="line">
     <div id="virtual-keyboard-high-shift1" class="character"><div id="char-virtual-keyboard-key-1" class="lowercase"></div></div>
@@ -304,7 +304,7 @@
   </div>
 </div><div id="virtual-keyboard-key-14" class="key system" style="width: 250%">
   <div class="line">
-    <div class="character single"><div id="char-virtual-keyboard-key-14" class="lowercase"><img class="icon" src="vkeyboard/backspace.svg"></div></div>
+    <div class="character single"><div id="char-virtual-keyboard-key-14" class="lowercase"><img class="icon" src="../vkeyboard/backspace.svg"></div></div>
   </div>
 </div></div><div class="row"><div id="virtual-keyboard-key-15" class="key disabled" style="width: 200%">
   <div class="line">
@@ -375,7 +375,7 @@
 </div></div><div class="row"><div id="virtual-keyboard-key-29" class="key system" style="width: 250%">
   <div class="line">
     <div class="character single"><div id="char-virtual-keyboard-key-29" class="lowercase"><div class="lock_panel">
-      <img class="icon" src="vkeyboard/lock.svg">
+      <img class="icon" src="../vkeyboard/lock.svg">
       <div class="lock">
         <div id="virtual-keyboard-key-29lock" class="light"></div>
       </div>
@@ -450,7 +450,7 @@
   </div>
 </div></div><div class="row"><div id="virtual-keyboard-key-43" class="key system" style="width: 200%">
   <div class="line">
-    <div class="character single"><div id="char-virtual-keyboard-key-43" class="lowercase"><img class="icon" src="vkeyboard/shift.svg"></div></div>
+    <div class="character single"><div id="char-virtual-keyboard-key-43" class="lowercase"><img class="icon" src="../vkeyboard/shift.svg"></div></div>
   </div>
 </div><div id="virtual-keyboard-key-44" class="key" style="width: 100%">
   <div class="line">
@@ -518,7 +518,7 @@
   </div>
 </div><div id="virtual-keyboard-key-55" class="key system" style="width: 300%">
   <div class="line">
-    <div class="character single"><div id="char-virtual-keyboard-key-55" class="lowercase"><img class="icon" src="vkeyboard/shift.svg"></div></div>
+    <div class="character single"><div id="char-virtual-keyboard-key-55" class="lowercase"><img class="icon" src="../vkeyboard/shift.svg"></div></div>
   </div>
 </div></div><div class="row"><div id="virtual-keyboard-key-56" class="key disabled" style="width: 100%">
   <div class="line">
@@ -526,7 +526,7 @@
   </div>
 </div><div id="virtual-keyboard-key-57" class="key system" style="width: 200%">
   <div class="line">
-    <div class="character single"><div id="char-virtual-keyboard-key-57" class="lowercase"><img class="icon" src="vkeyboard/alt.svg"></div></div>
+    <div class="character single"><div id="char-virtual-keyboard-key-57" class="lowercase"><img class="icon" src="../vkeyboard/alt.svg"></div></div>
   </div>
 </div><div id="virtual-keyboard-key-58" class="key" style="width: 800%">
   <div class="line">
@@ -534,7 +534,7 @@
   </div>
 </div><div id="virtual-keyboard-key-59" class="key system" style="width: 200%">
   <div class="line">
-    <div class="character single"><div id="char-virtual-keyboard-key-59" class="lowercase"><img class="icon" src="vkeyboard/alt.svg"></div></div>
+    <div class="character single"><div id="char-virtual-keyboard-key-59" class="lowercase"><img class="icon" src="../vkeyboard/alt.svg"></div></div>
   </div>
 </div><div id="virtual-keyboard-key-60" class="key disabled" style="width: 100%">
   <div class="line">
