rearranging directory and improvement

--- a/test-componentsHTML/index.html
+++ b/test-componentsHTML/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Title</title>
-	<link rel="stylesheet" href="main.css"><link rel="stylesheet" href="Common.css">
-	<script src="components/tools/Tools.js"  ></script>
-	<script src="components/tools/DOM-extd.js"></script>
+	<link rel="stylesheet" href="main.css"/>
+	<link rel="stylesheet" href="Common.css"/>
+
+	<script src="../Core/Core.js"  ></script>
+	<script src="../Tools/Tools.js"  ></script>
+
 	<script src="components/pop-up/define.js"  ></script>
 
 
