modif getFile _path always in absolute

--- a/index-template.html
+++ b/index-template.html
@@ -49,7 +49,7 @@
 					<span>{{hello}}</span><br/>
 					 <span>{{demain}}</span><br/>
 					{{else}}
-					<span>condition REJECT!</span><br/>{{include /widget.html}}
+					<span>condition REJECT!</span><br/>{{include widget.html}}
 					<span>{{"hello"}}</span><br/>
 					<span>{{demain}}</span><br/>
 					<span>{{"hello"}}</span><br/>
